--- a/nyan_keys.ioc
+++ b/nyan_keys.ioc
@@ -26,7 +26,7 @@ Dma.I2C1_RX.0.MemInc=DMA_MINC_ENABLE
 Dma.I2C1_RX.0.Mode=DMA_NORMAL
 Dma.I2C1_RX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
 Dma.I2C1_RX.0.PeriphInc=DMA_PINC_DISABLE
-Dma.I2C1_RX.0.Priority=DMA_PRIORITY_HIGH
+Dma.I2C1_RX.0.Priority=DMA_PRIORITY_MEDIUM
 Dma.I2C1_RX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 Dma.I2C1_TX.1.Direction=DMA_MEMORY_TO_PERIPH
 Dma.I2C1_TX.1.FIFOMode=DMA_FIFOMODE_DISABLE
@@ -36,7 +36,7 @@ Dma.I2C1_TX.1.MemInc=DMA_MINC_ENABLE
 Dma.I2C1_TX.1.Mode=DMA_NORMAL
 Dma.I2C1_TX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
 Dma.I2C1_TX.1.PeriphInc=DMA_PINC_DISABLE
-Dma.I2C1_TX.1.Priority=DMA_PRIORITY_HIGH
+Dma.I2C1_TX.1.Priority=DMA_PRIORITY_MEDIUM
 Dma.I2C1_TX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 Dma.Request0=I2C1_RX
 Dma.Request1=I2C1_TX
@@ -110,20 +110,20 @@ NVIC.DMA1_Stream6_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.I2C1_ER_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
-NVIC.I2C1_EV_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.I2C1_ER_IRQn=true\:2\:0\:true\:false\:true\:true\:true\:true
+NVIC.I2C1_EV_IRQn=true\:2\:0\:true\:false\:true\:true\:true\:true
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.OTG_HS_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.OTG_HS_IRQn=true\:1\:0\:true\:false\:true\:true\:true\:true
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
-NVIC.TIM1_CC_IRQn=true\:1\:0\:true\:false\:true\:true\:true\:true
-NVIC.TIM1_UP_TIM10_IRQn=true\:1\:0\:true\:false\:true\:true\:true\:true
-NVIC.TIM6_DAC_IRQn=true\:1\:0\:true\:false\:true\:true\:true\:true
-NVIC.TIM7_IRQn=true\:1\:0\:true\:false\:true\:true\:true\:true
-NVIC.TIM8_CC_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.TIM1_CC_IRQn=true\:10\:0\:true\:false\:true\:true\:true\:true
+NVIC.TIM1_UP_TIM10_IRQn=true\:11\:0\:true\:false\:true\:true\:true\:true
+NVIC.TIM6_DAC_IRQn=true\:12\:0\:true\:false\:true\:true\:true\:true
+NVIC.TIM7_IRQn=true\:13\:0\:true\:false\:true\:true\:true\:true
+NVIC.TIM8_CC_IRQn=true\:14\:0\:true\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA5.Mode=Full_Duplex_Master
 PA5.Signal=SPI1_SCK
@@ -310,9 +310,10 @@ TIM8.ClockDivision=TIM_CLOCKDIVISION_DIV2
 TIM8.IPParameters=ClockDivision,Prescaler,Period,Channel-Output Compare1 No Output,AutoReloadPreload
 TIM8.Period=199
 TIM8.Prescaler=53999
-USB_OTG_HS.IPParameters=VirtualMode,speed,Sof_enable-Internal_Phy_Device
+USB_OTG_HS.IPParameters=VirtualMode,speed,Sof_enable-Internal_Phy_Device,dma_enable
 USB_OTG_HS.Sof_enable-Internal_Phy_Device=ENABLE
 USB_OTG_HS.VirtualMode=Int_Phy_Device
+USB_OTG_HS.dma_enable=ENABLE
 USB_OTG_HS.speed=USB_OTG_SPEED_HIGH
 VP_AL94.I-CUBE-USBD-COMPOSITE_VS_USBJjComposite_1.0.0_1.0.3.Mode=USBJjComposite
 VP_AL94.I-CUBE-USBD-COMPOSITE_VS_USBJjComposite_1.0.0_1.0.3.Signal=AL94.I-CUBE-USBD-COMPOSITE_VS_USBJjComposite_1.0.0_1.0.3
