added stm32 bitstream programming

--- a/nyan_keys.ioc
+++ b/nyan_keys.ioc
@@ -69,36 +69,39 @@ Mcu.IPNb=15
 Mcu.Name=STM32F723V(C-E)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PE2
-Mcu.Pin1=PE5
-Mcu.Pin10=PA7
-Mcu.Pin11=PB10
-Mcu.Pin12=REXTPHYHS
-Mcu.Pin13=PB14
-Mcu.Pin14=PB15
-Mcu.Pin15=PD0
-Mcu.Pin16=PD1
-Mcu.Pin17=PD2
-Mcu.Pin18=PD3
-Mcu.Pin19=PD4
-Mcu.Pin2=PE6
-Mcu.Pin20=PB6
-Mcu.Pin21=PB7
-Mcu.Pin22=VP_RNG_VS_RNG
-Mcu.Pin23=VP_SYS_VS_Systick
-Mcu.Pin24=VP_TIM1_VS_no_output1
-Mcu.Pin25=VP_TIM6_VS_ClockSourceINT
-Mcu.Pin26=VP_TIM7_VS_ClockSourceINT
-Mcu.Pin27=VP_TIM8_VS_ClockSourceINT
-Mcu.Pin28=VP_TIM8_VS_no_output1
-Mcu.Pin29=VP_AL94.I-CUBE-USBD-COMPOSITE_VS_USBJjComposite_1.0.0_1.0.3
-Mcu.Pin3=PH0-OSC_IN
-Mcu.Pin4=PH1-OSC_OUT
-Mcu.Pin5=PC1
-Mcu.Pin6=PC2
-Mcu.Pin7=PA4
-Mcu.Pin8=PA5
-Mcu.Pin9=PA6
-Mcu.PinsNb=30
+Mcu.Pin1=PE3
+Mcu.Pin10=PA4
+Mcu.Pin11=PA5
+Mcu.Pin12=PA6
+Mcu.Pin13=PA7
+Mcu.Pin14=PB10
+Mcu.Pin15=REXTPHYHS
+Mcu.Pin16=PB14
+Mcu.Pin17=PB15
+Mcu.Pin18=PD0
+Mcu.Pin19=PD1
+Mcu.Pin2=PE4
+Mcu.Pin20=PD2
+Mcu.Pin21=PD3
+Mcu.Pin22=PD4
+Mcu.Pin23=PB6
+Mcu.Pin24=PB7
+Mcu.Pin25=VP_RNG_VS_RNG
+Mcu.Pin26=VP_SYS_VS_Systick
+Mcu.Pin27=VP_TIM1_VS_no_output1
+Mcu.Pin28=VP_TIM6_VS_ClockSourceINT
+Mcu.Pin29=VP_TIM7_VS_ClockSourceINT
+Mcu.Pin3=PE5
+Mcu.Pin30=VP_TIM8_VS_ClockSourceINT
+Mcu.Pin31=VP_TIM8_VS_no_output1
+Mcu.Pin32=VP_AL94.I-CUBE-USBD-COMPOSITE_VS_USBJjComposite_1.0.0_1.0.3
+Mcu.Pin4=PE6
+Mcu.Pin5=PC13
+Mcu.Pin6=PH0-OSC_IN
+Mcu.Pin7=PH1-OSC_OUT
+Mcu.Pin8=PC1
+Mcu.Pin9=PC2
+Mcu.PinsNb=33
 Mcu.ThirdParty0=AL94.I-CUBE-USBD-COMPOSITE.1.0.3
 Mcu.ThirdPartyNb=1
 Mcu.UserConstants=
@@ -146,6 +149,12 @@ PB7.Mode=I2C
 PB7.Signal=I2C1_SDA
 PC1.Mode=Full_Duplex_Master
 PC1.Signal=SPI2_MOSI
+PC13.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_Mode
+PC13.GPIO_Label=Nyan FPGA Config Done
+PC13.GPIO_Mode=GPIO_MODE_INPUT
+PC13.GPIO_PuPd=GPIO_PULLDOWN
+PC13.Locked=true
+PC13.Signal=GPIO_Input
 PC2.Mode=Full_Duplex_Master
 PC2.Signal=SPI2_MISO
 PD0.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
@@ -180,6 +189,19 @@ PD4.Locked=true
 PD4.Signal=GPIO_Output
 PE2.Mode=Full_Duplex_Master
 PE2.Signal=SPI4_SCK
+PE3.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
+PE3.GPIO_Label=SPI4_SS
+PE3.GPIO_PuPd=GPIO_PULLDOWN
+PE3.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PE3.Locked=true
+PE3.Signal=GPIO_Output
+PE4.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label
+PE4.GPIO_Label=FPGA_config_nrst
+PE4.GPIO_PuPd=GPIO_PULLUP
+PE4.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
+PE4.Locked=true
+PE4.PinState=GPIO_PIN_SET
+PE4.Signal=GPIO_Output
 PE5.Mode=Full_Duplex_Master
 PE5.Signal=SPI4_MISO
 PE6.Mode=Full_Duplex_Master
@@ -287,9 +309,11 @@ SPI2.Direction=SPI_DIRECTION_2LINES
 SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
 SPI2.Mode=SPI_MODE_MASTER
 SPI2.VirtualType=VM_MASTER
-SPI4.CalculateBaudRate=54.0 MBits/s
+SPI4.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_64
+SPI4.CalculateBaudRate=1.6875 MBits/s
+SPI4.DataSize=SPI_DATASIZE_8BIT
 SPI4.Direction=SPI_DIRECTION_2LINES
-SPI4.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
+SPI4.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,DataSize,BaudRatePrescaler
 SPI4.Mode=SPI_MODE_MASTER
 SPI4.VirtualType=VM_MASTER
 TIM1.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
