DMA Failing to un-busy USB HS

--- a/nyan_keys.ioc
+++ b/nyan_keys.ioc
@@ -144,6 +144,8 @@ NVIC.I2C1_ER_IRQn=true\:3\:0\:true\:false\:true\:true\:true\:true
 NVIC.I2C1_EV_IRQn=true\:3\:0\:true\:false\:true\:true\:true\:true
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.OTG_HS_EP1_IN_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.OTG_HS_EP1_OUT_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.OTG_HS_IRQn=true\:1\:0\:true\:false\:true\:true\:true\:true
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
@@ -246,7 +248,7 @@ PH1-OSC_OUT.Mode=HSE-External-Clock-Source
 PH1-OSC_OUT.Signal=RCC_OSC_OUT
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
-ProjectManager.BackupPrevious=false
+ProjectManager.BackupPrevious=true
 ProjectManager.CompilerOptimize=6
 ProjectManager.ComputerToolchain=false
 ProjectManager.CoupleFile=true
@@ -376,7 +378,7 @@ TIM8.Channel-Output\ Compare1\ No\ Output=TIM_CHANNEL_1
 TIM8.ClockDivision=TIM_CLOCKDIVISION_DIV1
 TIM8.IPParameters=ClockDivision,Prescaler,Period,Channel-Output Compare1 No Output,AutoReloadPreload
 TIM8.Period=99
-TIM8.Prescaler=53999
+TIM8.Prescaler=2699
 USB_OTG_HS.IPParameters=VirtualMode,speed,dma_enable
 USB_OTG_HS.VirtualMode=Int_Phy_Device
 USB_OTG_HS.dma_enable=ENABLE
