--- a/nyan_keys.ioc
+++ b/nyan_keys.ioc
@@ -74,58 +74,56 @@ Mcu.CPN=STM32F723VET6
 Mcu.Family=STM32F7
 Mcu.IP0=CORTEX_M7
 Mcu.IP1=DMA
-Mcu.IP10=TIM1
-Mcu.IP11=TIM6
-Mcu.IP12=TIM7
-Mcu.IP13=TIM8
+Mcu.IP10=TIM6
+Mcu.IP11=TIM7
+Mcu.IP12=TIM8
+Mcu.IP13=TIM14
 Mcu.IP14=USB_OTG_HS
 Mcu.IP2=I2C1
 Mcu.IP3=NVIC
 Mcu.IP4=RCC
 Mcu.IP5=RNG
-Mcu.IP6=SPI1
-Mcu.IP7=SPI2
-Mcu.IP8=SPI4
-Mcu.IP9=SYS
+Mcu.IP6=SPI2
+Mcu.IP7=SPI4
+Mcu.IP8=SYS
+Mcu.IP9=TIM1
 Mcu.IPNb=15
 Mcu.Name=STM32F723V(C-E)Tx
 Mcu.Package=LQFP100
-Mcu.Pin0=PE2
-Mcu.Pin1=PE3
-Mcu.Pin10=PC2
-Mcu.Pin11=PA4
-Mcu.Pin12=PA5
-Mcu.Pin13=PA6
-Mcu.Pin14=PA7
-Mcu.Pin15=PB10
-Mcu.Pin16=REXTPHYHS
-Mcu.Pin17=PB14
-Mcu.Pin18=PB15
-Mcu.Pin19=PD0
-Mcu.Pin2=PE4
-Mcu.Pin20=PD1
-Mcu.Pin21=PD2
-Mcu.Pin22=PD3
-Mcu.Pin23=PD4
-Mcu.Pin24=PB6
-Mcu.Pin25=PB7
-Mcu.Pin26=VP_RNG_VS_RNG
-Mcu.Pin27=VP_SYS_VS_Systick
-Mcu.Pin28=VP_TIM1_VS_no_output1
-Mcu.Pin29=VP_TIM1_VS_no_output2
-Mcu.Pin3=PE5
-Mcu.Pin30=VP_TIM6_VS_ClockSourceINT
-Mcu.Pin31=VP_TIM7_VS_ClockSourceINT
-Mcu.Pin32=VP_TIM8_VS_ClockSourceINT
-Mcu.Pin33=VP_TIM8_VS_no_output1
-Mcu.Pin34=VP_AL94.I-CUBE-USBD-COMPOSITE_VS_USBJjComposite_1.0.0_1.0.3
-Mcu.Pin4=PE6
-Mcu.Pin5=PC13
-Mcu.Pin6=PH0-OSC_IN
-Mcu.Pin7=PH1-OSC_OUT
-Mcu.Pin8=PC0
-Mcu.Pin9=PC1
-Mcu.PinsNb=35
+Mcu.Pin0=PE3
+Mcu.Pin1=PE4
+Mcu.Pin10=PA4
+Mcu.Pin11=PE12
+Mcu.Pin12=PB10
+Mcu.Pin13=REXTPHYHS
+Mcu.Pin14=PB14
+Mcu.Pin15=PB15
+Mcu.Pin16=PD0
+Mcu.Pin17=PD1
+Mcu.Pin18=PD2
+Mcu.Pin19=PD3
+Mcu.Pin2=PE5
+Mcu.Pin20=PD4
+Mcu.Pin21=PB6
+Mcu.Pin22=PB7
+Mcu.Pin23=VP_RNG_VS_RNG
+Mcu.Pin24=VP_SYS_VS_Systick
+Mcu.Pin25=VP_TIM1_VS_no_output1
+Mcu.Pin26=VP_TIM1_VS_no_output2
+Mcu.Pin27=VP_TIM6_VS_ClockSourceINT
+Mcu.Pin28=VP_TIM7_VS_ClockSourceINT
+Mcu.Pin29=VP_TIM8_VS_ClockSourceINT
+Mcu.Pin3=PE6
+Mcu.Pin30=VP_TIM8_VS_no_output1
+Mcu.Pin31=VP_TIM14_VS_ClockSourceINT
+Mcu.Pin32=VP_AL94.I-CUBE-USBD-COMPOSITE_VS_USBJjComposite_1.0.0_1.0.3
+Mcu.Pin4=PC13
+Mcu.Pin5=PH0-OSC_IN
+Mcu.Pin6=PH1-OSC_OUT
+Mcu.Pin7=PC0
+Mcu.Pin8=PC1
+Mcu.Pin9=PC2
+Mcu.PinsNb=33
 Mcu.ThirdParty0=AL94.I-CUBE-USBD-COMPOSITE.1.0.3
 Mcu.ThirdPartyNb=1
 Mcu.UserConstants=
@@ -157,15 +155,10 @@ NVIC.TIM1_UP_TIM10_IRQn=true\:11\:0\:true\:false\:true\:true\:true\:true
 NVIC.TIM6_DAC_IRQn=true\:12\:0\:true\:false\:true\:true\:true\:true
 NVIC.TIM7_IRQn=true\:13\:0\:true\:false\:true\:true\:true\:true
 NVIC.TIM8_CC_IRQn=true\:9\:0\:true\:false\:true\:true\:true\:true
+NVIC.TIM8_TRG_COM_TIM14_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA4.Mode=Activate_SOF_FS
 PA4.Signal=USB_OTG_HS_SOF
-PA5.Mode=Full_Duplex_Master
-PA5.Signal=SPI1_SCK
-PA6.Mode=Full_Duplex_Master
-PA6.Signal=SPI1_MISO
-PA7.Mode=Full_Duplex_Master
-PA7.Signal=SPI1_MOSI
 PB10.Mode=Full_Duplex_Master
 PB10.Signal=SPI2_SCK
 PB14.Mode=Internal_Phy_Device
@@ -223,12 +216,8 @@ PD4.GPIO_PuPd=GPIO_PULLDOWN
 PD4.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PD4.Locked=true
 PD4.Signal=GPIO_Output
-PE2.Mode=Full_Duplex_Master
-PE2.Signal=SPI4_SCK
-PE3.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
-PE3.GPIO_Label=SPI4_SS
-PE3.GPIO_PuPd=GPIO_PULLDOWN
-PE3.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PE12.Mode=Full_Duplex_Master
+PE12.Signal=SPI4_SCK
 PE3.Locked=true
 PE3.Signal=GPIO_Output
 PE4.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label
@@ -277,7 +266,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_SPI1_Init-SPI1-false-HAL-true,5-MX_SPI2_Init-SPI2-false-HAL-true,6-MX_SPI4_Init-SPI4-false-HAL-true,7-MX_I2C1_Init-I2C1-false-HAL-true,8-MX_TIM7_Init-TIM7-false-HAL-true,9-MX_TIM6_Init-TIM6-false-HAL-true,10-MX_TIM1_Init-TIM1-false-HAL-true,11-MX_USB_OTG_HS_PCD_Init-USB_OTG_HS-false-HAL-true,12-MX_RNG_Init-RNG-false-HAL-true,13-MX_TIM8_Init-TIM8-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_SPI1_Init-SPI1-false-HAL-true,5-MX_SPI2_Init-SPI2-false-HAL-true,6-MX_SPI4_Init-SPI4-false-HAL-true,7-MX_I2C1_Init-I2C1-false-HAL-true,8-MX_TIM7_Init-TIM7-false-HAL-true,9-MX_TIM6_Init-TIM6-false-HAL-true,10-MX_TIM1_Init-TIM1-false-HAL-true,11-MX_USB_OTG_HS_PCD_Init-USB_OTG_HS-false-HAL-true,12-MX_RNG_Init-RNG-false-HAL-true,13-MX_TIM8_Init-TIM8-false-HAL-true,14-MX_TIM14_Init-TIM14-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 RCC.AHBFreq_Value=216000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
 RCC.APB1Freq_Value=54000000
@@ -334,12 +323,6 @@ RCC.VCOOutputFreq_Value=432000000
 RCC.VCOSAIOutputFreq_Value=192000000
 REXTPHYHS.Mode=Internal_Phy_Device
 REXTPHYHS.Signal=USB_OTG_HS_REXTPHYHS
-SPI1.CalculateBaudRate=54.0 MBits/s
-SPI1.DataSize=SPI_DATASIZE_8BIT
-SPI1.Direction=SPI_DIRECTION_2LINES
-SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,DataSize
-SPI1.Mode=SPI_MODE_MASTER
-SPI1.VirtualType=VM_MASTER
 SPI2.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_8
 SPI2.CLKPhase=SPI_PHASE_1EDGE
 SPI2.CLKPolarity=SPI_POLARITY_LOW
@@ -365,6 +348,11 @@ TIM1.Period=256
 TIM1.Prescaler=320
 TIM1.Pulse-Output\ Compare1\ No\ Output=0
 TIM1.Pulse-Output\ Compare2\ No\ Output=33
+TIM14.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
+TIM14.ClockDivision=TIM_CLOCKDIVISION_DIV4
+TIM14.IPParameters=ClockDivision,Prescaler,Period,AutoReloadPreload
+TIM14.Period=215
+TIM14.Prescaler=62499
 TIM6.IPParameters=Prescaler,Period
 TIM6.Period=37
 TIM6.Prescaler=16452
@@ -389,6 +377,8 @@ VP_RNG_VS_RNG.Mode=RNG_Activate
 VP_RNG_VS_RNG.Signal=RNG_VS_RNG
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM14_VS_ClockSourceINT.Mode=Enable_Timer
+VP_TIM14_VS_ClockSourceINT.Signal=TIM14_VS_ClockSourceINT
 VP_TIM1_VS_no_output1.Mode=Output Compare1 No Output
 VP_TIM1_VS_no_output1.Signal=TIM1_VS_no_output1
 VP_TIM1_VS_no_output2.Mode=Output Compare2 No Output
