--- a/nyan_keys.ioc
+++ b/nyan_keys.ioc
@@ -218,7 +218,12 @@ PD4.Locked=true
 PD4.Signal=GPIO_Output
 PE12.Mode=Full_Duplex_Master
 PE12.Signal=SPI4_SCK
+PE3.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label
+PE3.GPIO_Label=SPI4 SS
+PE3.GPIO_PuPd=GPIO_PULLUP
+PE3.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PE3.Locked=true
+PE3.PinState=GPIO_PIN_SET
 PE3.Signal=GPIO_Output
 PE4.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label
 PE4.GPIO_Label=FPGA_config_nrst
@@ -266,7 +271,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_SPI1_Init-SPI1-false-HAL-true,5-MX_SPI2_Init-SPI2-false-HAL-true,6-MX_SPI4_Init-SPI4-false-HAL-true,7-MX_I2C1_Init-I2C1-false-HAL-true,8-MX_TIM7_Init-TIM7-false-HAL-true,9-MX_TIM6_Init-TIM6-false-HAL-true,10-MX_TIM1_Init-TIM1-false-HAL-true,11-MX_USB_OTG_HS_PCD_Init-USB_OTG_HS-false-HAL-true,12-MX_RNG_Init-RNG-false-HAL-true,13-MX_TIM8_Init-TIM8-false-HAL-true,14-MX_TIM14_Init-TIM14-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_SPI2_Init-SPI2-false-HAL-true,5-MX_SPI4_Init-SPI4-false-HAL-true,6-MX_I2C1_Init-I2C1-false-HAL-true,7-MX_TIM7_Init-TIM7-false-HAL-true,8-MX_TIM6_Init-TIM6-false-HAL-true,9-MX_TIM1_Init-TIM1-false-HAL-true,10-MX_USB_OTG_HS_PCD_Init-USB_OTG_HS-false-HAL-true,11-MX_RNG_Init-RNG-false-HAL-true,12-MX_TIM8_Init-TIM8-false-HAL-true,13-MX_TIM14_Init-TIM14-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 RCC.AHBFreq_Value=216000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
 RCC.APB1Freq_Value=54000000
