--- a/nyan_keys.ioc
+++ b/nyan_keys.ioc
@@ -271,7 +271,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_SPI2_Init-SPI2-false-HAL-true,5-MX_SPI4_Init-SPI4-false-HAL-true,6-MX_I2C1_Init-I2C1-false-HAL-true,7-MX_TIM7_Init-TIM7-false-HAL-true,8-MX_TIM6_Init-TIM6-false-HAL-true,9-MX_TIM1_Init-TIM1-false-HAL-true,10-MX_USB_OTG_HS_PCD_Init-USB_OTG_HS-false-HAL-true,11-MX_RNG_Init-RNG-false-HAL-true,12-MX_TIM8_Init-TIM8-false-HAL-true,13-MX_TIM14_Init-TIM14-false-HAL-true,14-MX_ADC1_Init-ADC1-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_SPI2_Init-SPI2-false-HAL-true,5-MX_SPI4_Init-SPI4-false-HAL-true,6-MX_I2C1_Init-I2C1-false-HAL-true,7-MX_TIM7_Init-TIM7-false-HAL-true,8-MX_TIM6_Init-TIM6-false-HAL-true,9-MX_TIM1_Init-TIM1-false-HAL-true,10-MX_USB_OTG_HS_PCD_Init-USB_OTG_HS-false-HAL-true,11-MX_RNG_Init-RNG-false-HAL-true,12-MX_TIM8_Init-TIM8-false-HAL-true,13-MX_TIM14_Init-TIM14-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 RCC.AHBFreq_Value=216000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
 RCC.APB1Freq_Value=54000000
@@ -328,10 +328,10 @@ RCC.VCOOutputFreq_Value=432000000
 RCC.VCOSAIOutputFreq_Value=192000000
 REXTPHYHS.Mode=Internal_Phy_Device
 REXTPHYHS.Signal=USB_OTG_HS_REXTPHYHS
-SPI2.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_8
+SPI2.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_4
 SPI2.CLKPhase=SPI_PHASE_1EDGE
 SPI2.CLKPolarity=SPI_POLARITY_LOW
-SPI2.CalculateBaudRate=6.75 MBits/s
+SPI2.CalculateBaudRate=13.5 MBits/s
 SPI2.DataSize=SPI_DATASIZE_8BIT
 SPI2.Direction=SPI_DIRECTION_2LINES
 SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,DataSize,BaudRatePrescaler,CLKPhase,CLKPolarity
@@ -358,7 +358,7 @@ TIM1.TIM_MasterOutputTrigger2=TIM_TRGO2_RESET
 TIM1.TIM_MasterSlaveMode=TIM_MASTERSLAVEMODE_DISABLE
 TIM14.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM14.IPParameters=Prescaler,Period,AutoReloadPreload
-TIM14.Period=215
+TIM14.Period=1727
 TIM14.Prescaler=62499
 TIM6.IPParameters=Prescaler,Period
 TIM6.Period=37
