circular DMA enables 150k full_scans/s

--- a/nyan_keys.ioc
+++ b/nyan_keys.ioc
@@ -61,14 +61,14 @@ Dma.SPI2_TX.3.MemInc=DMA_MINC_ENABLE
 Dma.SPI2_TX.3.Mode=DMA_NORMAL
 Dma.SPI2_TX.3.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
 Dma.SPI2_TX.3.PeriphInc=DMA_PINC_DISABLE
-Dma.SPI2_TX.3.Priority=DMA_PRIORITY_HIGH
+Dma.SPI2_TX.3.Priority=DMA_PRIORITY_VERY_HIGH
 Dma.SPI2_TX.3.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 I2C1.I2C_Speed_Mode=I2C_Fast
 I2C1.IPParameters=Timing,I2C_Speed_Mode,Speed
-I2C1.Speed=200
-I2C1.Timing=0x00501FE4
+I2C1.Speed=400
+I2C1.Timing=0x6000030D
 KeepUserPlacement=false
 Mcu.CPN=STM32F723VET6
 Mcu.Family=STM32F7
@@ -106,24 +106,25 @@ Mcu.Pin2=PE4
 Mcu.Pin20=PD4
 Mcu.Pin21=PB6
 Mcu.Pin22=PB7
-Mcu.Pin23=VP_RNG_VS_RNG
-Mcu.Pin24=VP_SYS_VS_Systick
-Mcu.Pin25=VP_TIM1_VS_no_output1
-Mcu.Pin26=VP_TIM1_VS_no_output2
-Mcu.Pin27=VP_TIM6_VS_ClockSourceINT
-Mcu.Pin28=VP_TIM7_VS_ClockSourceINT
-Mcu.Pin29=VP_TIM8_VS_ClockSourceINT
+Mcu.Pin23=PE0
+Mcu.Pin24=VP_RNG_VS_RNG
+Mcu.Pin25=VP_SYS_VS_Systick
+Mcu.Pin26=VP_TIM1_VS_no_output1
+Mcu.Pin27=VP_TIM1_VS_no_output2
+Mcu.Pin28=VP_TIM6_VS_ClockSourceINT
+Mcu.Pin29=VP_TIM7_VS_ClockSourceINT
 Mcu.Pin3=PE5
-Mcu.Pin30=VP_TIM8_VS_no_output1
-Mcu.Pin31=VP_TIM14_VS_ClockSourceINT
-Mcu.Pin32=VP_AL94.I-CUBE-USBD-COMPOSITE_VS_USBJjComposite_1.0.0_1.0.3
+Mcu.Pin30=VP_TIM8_VS_ClockSourceINT
+Mcu.Pin31=VP_TIM8_VS_no_output1
+Mcu.Pin32=VP_TIM14_VS_ClockSourceINT
+Mcu.Pin33=VP_AL94.I-CUBE-USBD-COMPOSITE_VS_USBJjComposite_1.0.0_1.0.3
 Mcu.Pin4=PE6
 Mcu.Pin5=PC13
 Mcu.Pin6=PH0-OSC_IN
 Mcu.Pin7=PH1-OSC_OUT
 Mcu.Pin8=PC0
 Mcu.Pin9=PC1
-Mcu.PinsNb=33
+Mcu.PinsNb=34
 Mcu.ThirdParty0=AL94.I-CUBE-USBD-COMPOSITE.1.0.3
 Mcu.ThirdPartyNb=1
 Mcu.UserConstants=
@@ -131,10 +132,10 @@ Mcu.UserName=STM32F723VETx
 MxCube.Version=6.9.2
 MxDb.Version=DB.6.0.92
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.DMA1_Stream0_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
+NVIC.DMA1_Stream0_IRQn=true\:1\:0\:true\:false\:true\:false\:true\:true
 NVIC.DMA1_Stream3_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
-NVIC.DMA1_Stream4_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
-NVIC.DMA1_Stream6_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
+NVIC.DMA1_Stream4_IRQn=true\:1\:0\:true\:false\:true\:false\:true\:true
+NVIC.DMA1_Stream6_IRQn=true\:1\:0\:true\:false\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -157,6 +158,7 @@ NVIC.TIM6_DAC_IRQn=true\:12\:0\:true\:false\:true\:true\:true\:true
 NVIC.TIM7_IRQn=true\:13\:0\:true\:false\:true\:true\:true\:true
 NVIC.TIM8_CC_IRQn=true\:9\:0\:true\:false\:true\:true\:true\:true
 NVIC.TIM8_TRG_COM_TIM14_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.TIM8_UP_TIM13_IRQn=true\:3\:0\:true\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA4.Mode=Activate_SOF_FS
 PA4.Signal=USB_OTG_HS_SOF
@@ -217,6 +219,12 @@ PD4.GPIO_PuPd=GPIO_PULLDOWN
 PD4.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PD4.Locked=true
 PD4.Signal=GPIO_Output
+PE0.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
+PE0.GPIO_Label=Nyan DFU Enable
+PE0.GPIO_PuPd=GPIO_PULLDOWN
+PE0.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
+PE0.Locked=true
+PE0.Signal=GPIO_Output
 PE2.Mode=Full_Duplex_Master
 PE2.Signal=SPI4_SCK
 PE3.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
