--- a/nyan_keys.ioc
+++ b/nyan_keys.ioc
@@ -3,9 +3,10 @@ AL94.I-CUBE-USBD-COMPOSITE.1.0.3.CompositeCcUSBJjCOMPOSITEJjCDCIiACM=true
 AL94.I-CUBE-USBD-COMPOSITE.1.0.3.CompositeCcUSBJjCOMPOSITEJjCOMPOSITE=true
 AL94.I-CUBE-USBD-COMPOSITE.1.0.3.CompositeCcUSBJjCOMPOSITEJjCore=true
 AL94.I-CUBE-USBD-COMPOSITE.1.0.3.CompositeCcUSBJjCOMPOSITEJjHIDIiKEYBOARD=true
-AL94.I-CUBE-USBD-COMPOSITE.1.0.3.IPParameters=_USBD_USE_HS,_USBD_USE_CDC_ACM,_USBD_USE_HID_CUSTOM,_USBD_USE_HID_KEYBOARD,CompositeCcUSBJjCOMPOSITEJjCore,CompositeCcUSBJjCOMPOSITEJjCDCIiACM,CompositeCcUSBJjCOMPOSITEJjHIDIiKEYBOARD,CompositeCcUSBJjCOMPOSITEJjCOMPOSITE
+AL94.I-CUBE-USBD-COMPOSITE.1.0.3.IPParameters=_USBD_USE_HS,_USBD_USE_CDC_ACM,_USBD_USE_HID_CUSTOM,_USBD_USE_HID_KEYBOARD,CompositeCcUSBJjCOMPOSITEJjCore,CompositeCcUSBJjCOMPOSITEJjCDCIiACM,CompositeCcUSBJjCOMPOSITEJjHIDIiKEYBOARD,CompositeCcUSBJjCOMPOSITEJjCOMPOSITE,_USBD_USE_DFU
 AL94.I-CUBE-USBD-COMPOSITE.1.0.3.USBJjComposite_Checked=true
 AL94.I-CUBE-USBD-COMPOSITE.1.0.3._USBD_USE_CDC_ACM=true
+AL94.I-CUBE-USBD-COMPOSITE.1.0.3._USBD_USE_DFU=false
 AL94.I-CUBE-USBD-COMPOSITE.1.0.3._USBD_USE_HID_CUSTOM=false
 AL94.I-CUBE-USBD-COMPOSITE.1.0.3._USBD_USE_HID_KEYBOARD=true
 AL94.I-CUBE-USBD-COMPOSITE.1.0.3._USBD_USE_HS=true
@@ -279,7 +280,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_SPI2_Init-SPI2-false-HAL-true,5-MX_SPI4_Init-SPI4-false-HAL-true,6-MX_I2C1_Init-I2C1-false-HAL-true,7-MX_TIM7_Init-TIM7-false-HAL-true,8-MX_TIM6_Init-TIM6-false-HAL-true,9-MX_TIM1_Init-TIM1-false-HAL-true,10-MX_USB_OTG_HS_PCD_Init-USB_OTG_HS-false-HAL-true,11-MX_RNG_Init-RNG-false-HAL-true,12-MX_TIM8_Init-TIM8-false-HAL-true,13-MX_TIM14_Init-TIM14-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_SPI2_Init-SPI2-false-HAL-true,5-MX_SPI4_Init-SPI4-false-HAL-true,6-MX_I2C1_Init-I2C1-false-HAL-true,7-MX_TIM7_Init-TIM7-false-HAL-true,8-MX_TIM6_Init-TIM6-false-HAL-true,9-MX_TIM1_Init-TIM1-false-HAL-true,10-MX_RNG_Init-RNG-false-HAL-true,11-MX_TIM8_Init-TIM8-false-HAL-true,12-MX_TIM14_Init-TIM14-false-HAL-true,13-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 RCC.AHBFreq_Value=216000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
 RCC.APB1Freq_Value=54000000
