--- a/nyan_keys.ioc
+++ b/nyan_keys.ioc
@@ -3,7 +3,7 @@ AL94.I-CUBE-USBD-COMPOSITE.1.0.3.CompositeCcUSBJjCOMPOSITEJjCDCIiACM=true
 AL94.I-CUBE-USBD-COMPOSITE.1.0.3.CompositeCcUSBJjCOMPOSITEJjCOMPOSITE=true
 AL94.I-CUBE-USBD-COMPOSITE.1.0.3.CompositeCcUSBJjCOMPOSITEJjCore=true
 AL94.I-CUBE-USBD-COMPOSITE.1.0.3.CompositeCcUSBJjCOMPOSITEJjHIDIiKEYBOARD=true
-AL94.I-CUBE-USBD-COMPOSITE.1.0.3.IPParameters=_USBD_USE_HS,_USBD_USE_CDC_ACM,_USBD_USE_HID_CUSTOM,_USBD_USE_HID_KEYBOARD,CompositeCcUSBJjCOMPOSITEJjCore,CompositeCcUSBJjCOMPOSITEJjCDCIiACM,CompositeCcUSBJjCOMPOSITEJjHIDIiKEYBOARD,CompositeCcUSBJjCOMPOSITEJjCOMPOSITE,_USBD_USE_DFU
+AL94.I-CUBE-USBD-COMPOSITE.1.0.3.IPParameters=_USBD_USE_HS,_USBD_USE_CDC_ACM,_USBD_USE_HID_CUSTOM,_USBD_USE_HID_KEYBOARD,_USBD_USE_DFU,CompositeCcUSBJjCOMPOSITEJjCore,CompositeCcUSBJjCOMPOSITEJjCDCIiACM,CompositeCcUSBJjCOMPOSITEJjHIDIiKEYBOARD,CompositeCcUSBJjCOMPOSITEJjCOMPOSITE
 AL94.I-CUBE-USBD-COMPOSITE.1.0.3.USBJjComposite_Checked=true
 AL94.I-CUBE-USBD-COMPOSITE.1.0.3._USBD_USE_CDC_ACM=true
 AL94.I-CUBE-USBD-COMPOSITE.1.0.3._USBD_USE_DFU=false
@@ -42,8 +42,7 @@ Dma.I2C1_TX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAl
 Dma.Request0=I2C1_RX
 Dma.Request1=I2C1_TX
 Dma.Request2=SPI2_RX
-Dma.Request3=SPI2_TX
-Dma.RequestsNb=4
+Dma.RequestsNb=3
 Dma.SPI2_RX.2.Direction=DMA_PERIPH_TO_MEMORY
 Dma.SPI2_RX.2.FIFOMode=DMA_FIFOMODE_DISABLE
 Dma.SPI2_RX.2.Instance=DMA1_Stream3
@@ -54,16 +53,6 @@ Dma.SPI2_RX.2.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
 Dma.SPI2_RX.2.PeriphInc=DMA_PINC_DISABLE
 Dma.SPI2_RX.2.Priority=DMA_PRIORITY_VERY_HIGH
 Dma.SPI2_RX.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
-Dma.SPI2_TX.3.Direction=DMA_MEMORY_TO_PERIPH
-Dma.SPI2_TX.3.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.SPI2_TX.3.Instance=DMA1_Stream4
-Dma.SPI2_TX.3.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.SPI2_TX.3.MemInc=DMA_MINC_ENABLE
-Dma.SPI2_TX.3.Mode=DMA_NORMAL
-Dma.SPI2_TX.3.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.SPI2_TX.3.PeriphInc=DMA_PINC_DISABLE
-Dma.SPI2_TX.3.Priority=DMA_PRIORITY_VERY_HIGH
-Dma.SPI2_TX.3.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 I2C1.I2C_Speed_Mode=I2C_Fast
@@ -93,49 +82,47 @@ Mcu.Name=STM32F723V(C-E)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PE2
 Mcu.Pin1=PE3
-Mcu.Pin10=PC2
-Mcu.Pin11=PA4
-Mcu.Pin12=PB10
-Mcu.Pin13=REXTPHYHS
-Mcu.Pin14=PB14
-Mcu.Pin15=PB15
-Mcu.Pin16=PD0
-Mcu.Pin17=PD1
-Mcu.Pin18=PD2
-Mcu.Pin19=PD3
+Mcu.Pin10=PA4
+Mcu.Pin11=PB10
+Mcu.Pin12=REXTPHYHS
+Mcu.Pin13=PB14
+Mcu.Pin14=PB15
+Mcu.Pin15=PD0
+Mcu.Pin16=PD1
+Mcu.Pin17=PD2
+Mcu.Pin18=PD3
+Mcu.Pin19=PD4
 Mcu.Pin2=PE4
-Mcu.Pin20=PD4
-Mcu.Pin21=PB6
-Mcu.Pin22=PB7
-Mcu.Pin23=PE0
-Mcu.Pin24=VP_RNG_VS_RNG
-Mcu.Pin25=VP_SYS_VS_Systick
-Mcu.Pin26=VP_TIM1_VS_no_output1
-Mcu.Pin27=VP_TIM1_VS_no_output2
-Mcu.Pin28=VP_TIM6_VS_ClockSourceINT
-Mcu.Pin29=VP_TIM7_VS_ClockSourceINT
+Mcu.Pin20=PB6
+Mcu.Pin21=PB7
+Mcu.Pin22=PE0
+Mcu.Pin23=VP_RNG_VS_RNG
+Mcu.Pin24=VP_SYS_VS_Systick
+Mcu.Pin25=VP_TIM1_VS_no_output1
+Mcu.Pin26=VP_TIM1_VS_no_output2
+Mcu.Pin27=VP_TIM6_VS_ClockSourceINT
+Mcu.Pin28=VP_TIM7_VS_ClockSourceINT
+Mcu.Pin29=VP_TIM8_VS_ClockSourceINT
 Mcu.Pin3=PE5
-Mcu.Pin30=VP_TIM8_VS_ClockSourceINT
-Mcu.Pin31=VP_TIM8_VS_no_output1
-Mcu.Pin32=VP_TIM14_VS_ClockSourceINT
-Mcu.Pin33=VP_AL94.I-CUBE-USBD-COMPOSITE_VS_USBJjComposite_1.0.0_1.0.3
+Mcu.Pin30=VP_TIM8_VS_no_output1
+Mcu.Pin31=VP_TIM14_VS_ClockSourceINT
+Mcu.Pin32=VP_AL94.I-CUBE-USBD-COMPOSITE_VS_USBJjComposite_1.0.0_1.0.3
 Mcu.Pin4=PE6
 Mcu.Pin5=PC13
 Mcu.Pin6=PH0-OSC_IN
 Mcu.Pin7=PH1-OSC_OUT
 Mcu.Pin8=PC0
 Mcu.Pin9=PC1
-Mcu.PinsNb=34
+Mcu.PinsNb=33
 Mcu.ThirdParty0=AL94.I-CUBE-USBD-COMPOSITE.1.0.3
 Mcu.ThirdPartyNb=1
 Mcu.UserConstants=
 Mcu.UserName=STM32F723VETx
-MxCube.Version=6.9.2
-MxDb.Version=DB.6.0.92
+MxCube.Version=6.10.0
+MxDb.Version=DB.6.0.100
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.DMA1_Stream0_IRQn=true\:1\:0\:true\:false\:true\:false\:true\:true
 NVIC.DMA1_Stream3_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
-NVIC.DMA1_Stream4_IRQn=true\:1\:0\:true\:false\:true\:false\:true\:true
 NVIC.DMA1_Stream6_IRQn=true\:1\:0\:true\:false\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.ForceEnableDMAVector=true
@@ -163,7 +150,7 @@ NVIC.TIM8_UP_TIM13_IRQn=true\:3\:0\:true\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA4.Mode=Activate_SOF_FS
 PA4.Signal=USB_OTG_HS_SOF
-PB10.Mode=Full_Duplex_Master
+PB10.Mode=RX_Only_Simplex_Unidirect_Slave
 PB10.Signal=SPI2_SCK
 PB14.Mode=Internal_Phy_Device
 PB14.Signal=USB_OTG_HS_DM
@@ -180,7 +167,7 @@ PC0.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
 PC0.Locked=true
 PC0.PinState=GPIO_PIN_RESET
 PC0.Signal=GPIO_Output
-PC1.Mode=Full_Duplex_Master
+PC1.Mode=RX_Only_Simplex_Unidirect_Slave
 PC1.Signal=SPI2_MOSI
 PC13.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_Mode
 PC13.GPIO_Label=Nyan FPGA Config Done
@@ -188,8 +175,6 @@ PC13.GPIO_Mode=GPIO_MODE_INPUT
 PC13.GPIO_PuPd=GPIO_PULLDOWN
 PC13.Locked=true
 PC13.Signal=GPIO_Input
-PC2.Mode=Full_Duplex_Master
-PC2.Signal=SPI2_MISO
 PD0.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
 PD0.GPIO_Label=Nyan Keys LED0
 PD0.GPIO_PuPd=GPIO_PULLDOWN
@@ -280,7 +265,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_SPI2_Init-SPI2-false-HAL-true,5-MX_SPI4_Init-SPI4-false-HAL-true,6-MX_I2C1_Init-I2C1-false-HAL-true,7-MX_TIM7_Init-TIM7-false-HAL-true,8-MX_TIM6_Init-TIM6-false-HAL-true,9-MX_TIM1_Init-TIM1-false-HAL-true,10-MX_RNG_Init-RNG-false-HAL-true,11-MX_TIM8_Init-TIM8-false-HAL-true,12-MX_TIM14_Init-TIM14-false-HAL-true,13-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_SPI2_Init-SPI2-false-HAL-true,5-MX_SPI4_Init-SPI4-false-HAL-true,6-MX_I2C1_Init-I2C1-false-HAL-true,7-MX_TIM7_Init-TIM7-false-HAL-true,8-MX_TIM6_Init-TIM6-false-HAL-true,9-MX_TIM1_Init-TIM1-false-HAL-true,10-MX_RNG_Init-RNG-false-HAL-true,11-MX_TIM8_Init-TIM8-false-HAL-true,12-MX_TIM14_Init-TIM14-false-HAL-true,13-MX_USB_OTG_HS_PCD_Init-USB_OTG_HS-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 RCC.AHBFreq_Value=216000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
 RCC.APB1Freq_Value=54000000
@@ -337,15 +322,13 @@ RCC.VCOOutputFreq_Value=432000000
 RCC.VCOSAIOutputFreq_Value=192000000
 REXTPHYHS.Mode=Internal_Phy_Device
 REXTPHYHS.Signal=USB_OTG_HS_REXTPHYHS
-SPI2.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_4
 SPI2.CLKPhase=SPI_PHASE_1EDGE
 SPI2.CLKPolarity=SPI_POLARITY_LOW
-SPI2.CalculateBaudRate=13.5 MBits/s
 SPI2.DataSize=SPI_DATASIZE_8BIT
-SPI2.Direction=SPI_DIRECTION_2LINES
-SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,DataSize,BaudRatePrescaler,CLKPhase,CLKPolarity
-SPI2.Mode=SPI_MODE_MASTER
-SPI2.VirtualType=VM_MASTER
+SPI2.Direction=SPI_DIRECTION_2LINES_RXONLY
+SPI2.IPParameters=VirtualType,Mode,Direction,DataSize,CLKPhase,CLKPolarity
+SPI2.Mode=SPI_MODE_SLAVE
+SPI2.VirtualType=VM_SLAVE
 SPI4.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_16
 SPI4.CalculateBaudRate=6.75 MBits/s
 SPI4.DataSize=SPI_DATASIZE_8BIT
