--- a/nyan_keys.ioc
+++ b/nyan_keys.ioc
@@ -48,7 +48,7 @@ Dma.SPI2_RX.2.FIFOMode=DMA_FIFOMODE_DISABLE
 Dma.SPI2_RX.2.Instance=DMA1_Stream3
 Dma.SPI2_RX.2.MemDataAlignment=DMA_MDATAALIGN_BYTE
 Dma.SPI2_RX.2.MemInc=DMA_MINC_ENABLE
-Dma.SPI2_RX.2.Mode=DMA_NORMAL
+Dma.SPI2_RX.2.Mode=DMA_CIRCULAR
 Dma.SPI2_RX.2.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
 Dma.SPI2_RX.2.PeriphInc=DMA_PINC_DISABLE
 Dma.SPI2_RX.2.Priority=DMA_PRIORITY_VERY_HIGH
@@ -82,38 +82,39 @@ Mcu.Name=STM32F723V(C-E)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PE2
 Mcu.Pin1=PE3
-Mcu.Pin10=PA4
-Mcu.Pin11=PB10
-Mcu.Pin12=REXTPHYHS
-Mcu.Pin13=PB14
-Mcu.Pin14=PB15
-Mcu.Pin15=PD0
-Mcu.Pin16=PD1
-Mcu.Pin17=PD2
-Mcu.Pin18=PD3
-Mcu.Pin19=PD4
+Mcu.Pin10=PC2
+Mcu.Pin11=PA4
+Mcu.Pin12=PB10
+Mcu.Pin13=REXTPHYHS
+Mcu.Pin14=PB14
+Mcu.Pin15=PB15
+Mcu.Pin16=PD0
+Mcu.Pin17=PD1
+Mcu.Pin18=PD2
+Mcu.Pin19=PD3
 Mcu.Pin2=PE4
-Mcu.Pin20=PB6
-Mcu.Pin21=PB7
-Mcu.Pin22=PE0
-Mcu.Pin23=VP_RNG_VS_RNG
-Mcu.Pin24=VP_SYS_VS_Systick
-Mcu.Pin25=VP_TIM1_VS_no_output1
-Mcu.Pin26=VP_TIM1_VS_no_output2
-Mcu.Pin27=VP_TIM6_VS_ClockSourceINT
-Mcu.Pin28=VP_TIM7_VS_ClockSourceINT
-Mcu.Pin29=VP_TIM8_VS_ClockSourceINT
+Mcu.Pin20=PD4
+Mcu.Pin21=PB6
+Mcu.Pin22=PB7
+Mcu.Pin23=PE0
+Mcu.Pin24=VP_RNG_VS_RNG
+Mcu.Pin25=VP_SYS_VS_Systick
+Mcu.Pin26=VP_TIM1_VS_no_output1
+Mcu.Pin27=VP_TIM1_VS_no_output2
+Mcu.Pin28=VP_TIM6_VS_ClockSourceINT
+Mcu.Pin29=VP_TIM7_VS_ClockSourceINT
 Mcu.Pin3=PE5
-Mcu.Pin30=VP_TIM8_VS_no_output1
-Mcu.Pin31=VP_TIM14_VS_ClockSourceINT
-Mcu.Pin32=VP_AL94.I-CUBE-USBD-COMPOSITE_VS_USBJjComposite_1.0.0_1.0.3
+Mcu.Pin30=VP_TIM8_VS_ClockSourceINT
+Mcu.Pin31=VP_TIM8_VS_no_output1
+Mcu.Pin32=VP_TIM14_VS_ClockSourceINT
+Mcu.Pin33=VP_AL94.I-CUBE-USBD-COMPOSITE_VS_USBJjComposite_1.0.0_1.0.3
 Mcu.Pin4=PE6
 Mcu.Pin5=PC13
 Mcu.Pin6=PH0-OSC_IN
 Mcu.Pin7=PH1-OSC_OUT
 Mcu.Pin8=PC0
 Mcu.Pin9=PC1
-Mcu.PinsNb=33
+Mcu.PinsNb=34
 Mcu.ThirdParty0=AL94.I-CUBE-USBD-COMPOSITE.1.0.3
 Mcu.ThirdPartyNb=1
 Mcu.UserConstants=
@@ -161,7 +162,7 @@ PB6.Signal=I2C1_SCL
 PB7.Mode=I2C
 PB7.Signal=I2C1_SDA
 PC0.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label
-PC0.GPIO_Label=Keys Slave Select
+PC0.GPIO_Label=keys fpga resetn
 PC0.GPIO_PuPd=GPIO_PULLDOWN
 PC0.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
 PC0.Locked=true
@@ -175,6 +176,13 @@ PC13.GPIO_Mode=GPIO_MODE_INPUT
 PC13.GPIO_PuPd=GPIO_PULLDOWN
 PC13.Locked=true
 PC13.Signal=GPIO_Input
+PC2.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label
+PC2.GPIO_Label=keys_ack
+PC2.GPIO_PuPd=GPIO_PULLUP
+PC2.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
+PC2.Locked=true
+PC2.PinState=GPIO_PIN_SET
+PC2.Signal=GPIO_Output
 PD0.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
 PD0.GPIO_Label=Nyan Keys LED0
 PD0.GPIO_PuPd=GPIO_PULLDOWN
@@ -326,7 +334,8 @@ SPI2.CLKPhase=SPI_PHASE_1EDGE
 SPI2.CLKPolarity=SPI_POLARITY_LOW
 SPI2.DataSize=SPI_DATASIZE_8BIT
 SPI2.Direction=SPI_DIRECTION_2LINES_RXONLY
-SPI2.IPParameters=VirtualType,Mode,Direction,DataSize,CLKPhase,CLKPolarity
+SPI2.FirstBit=SPI_FIRSTBIT_MSB
+SPI2.IPParameters=VirtualType,Mode,Direction,DataSize,CLKPhase,CLKPolarity,FirstBit
 SPI2.Mode=SPI_MODE_SLAVE
 SPI2.VirtualType=VM_SLAVE
 SPI4.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_16
